resource/manifests/saludo-rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saludo-rest-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saludo-rest
  template:
    metadata:
      labels:
        app: saludo-rest
    spec:
      containers:
        - name: saludo-rest-container
          image: ecno20/saludo-service-app-user4:latest
          ports:
            - containerPort: 8080
