resource/manifests/saludo-rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saludo-rest-service
spec:
  selector:
    app: saludo-rest
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
